 - If you wish to continue playing the game as usual, you don't have to do anything.
* Feature: After not working for very long, the show keybinds feature is back in action. Toggle it in the main menu to show the keyboard shortcut for the Gui buttons.
* Bugfix: A few instances where decreasing stats would actually increase them are fixed. Thanks JadedFirefly for the report!
* Various typos fixed. Changed some word usage to be more consistent throughout the game.
* Item: Added a Leporine+ item (rabbit TF level 2). It is dropped from Lagon, Brute Lagon and Brute Ophelia, and can drop from regular rabbit mobs with very low rate. It has less extreme effects than Equinium+ does, but there are special variations of the item brewed by Ophelia.
* Debug feature to call arbitrary scenes from the window.scenes console variable. This is not a scene gallery!

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.5.6
-------------
* Bugfix: Gryphon feet are no longer referred to as talons.
* Bugfix: Fixed some bugged output in some of Gwendy's new scenes.
* Typo: Fixed a duplicate line in Barnaby BJ scene.
* Typo: Various word-choice consistency issues fixed.
* Added new $20 patreons from 0.5.5 to credits.

Adding 16k words of new content, revolving around Adrian the farmhand. He's a complex beast, though part of his content is locked behind an event not yet in the game. Here's what is in:
* Talk (he's not much of a talker).
* Work (with some background scenes). Builds friendship.
* Flirt, from innocent to lewd. Builds his confidence.
* Lay claim on Gwendy and be a general Jerk to Adrian. Makes him jealous of you.
* Seduction that leads to opening up sex options. Currently:
 - Give him a handjob.
 - Give him a blowjob.