@@ -13,6 +13,7 @@ Version 0.5.7
  - If you wish to continue playing the game as usual, you don't have to do anything.
 * Feature: After not working for very long, the show keybinds feature is back in action. Toggle it in the main menu to show the keyboard shortcut for the Gui buttons.
 * Bugfix: A few instances where decreasing stats would actually increase them are fixed. Thanks JadedFirefly for the report!
+* Bugfix: Added a dream for Asche that was commented out (need to have visited the Highland spring during one of her quests). Probably written by The Observer.
 * Various typos fixed. Changed some word usage to be more consistent throughout the game.
 * Item: Added a Leporine+ item (rabbit TF level 2). It is dropped from Lagon, Brute Lagon and Brute Ophelia, and can drop from regular rabbit mobs with very low rate. It has less extreme effects than Equinium+ does, but there are special variations of the item brewed by Ophelia.
 * Debug feature to call arbitrary scenes from the window.scenes console variable. This is not a scene gallery!
